2012-10-22  Allan Sandfeld Jensen  <allan.jensen@digia.com>

        [Qt] Handle GET of blob URLs.
        https://bugs.webkit.org/show_bug.cgi?id=99053

        Reviewed by Simon Hausmann.

        Unskip tests working after we handle GET of Blob URLs. Unfortunately they require beginDragWithFiles, 
        and thus only work in DRT.

        * platform/qt-5.0-wk2/TestExpectations:
        * platform/qt/TestExpectations:
        * platform/qt/fast/files/workers/worker-read-blob-async-actual.txt: Added.

2012-10-22  Allan Sandfeld Jensen  <allan.jensen@digia.com>

        [Qt] Basic gesture event handling
        https://bugs.webkit.org/show_bug.cgi?id=66173

        Reviewed by Simon Hausmann.

        * platform/qt-5.0-wk2/TestExpectations:
        * platform/qt/TestExpectations:
        * platform/qt/fast/events/touch/gesture/gesture-click-expected.txt: Added.

2012-10-22  Shinya Kawanaka  <shinyak@chromium.org>

        [Shadow] ASSERT triggered when we try reprojecting fallback elements.
        https://bugs.webkit.org/show_bug.cgi?id=99815

        Reviewed by Hajime Morita.

        * fast/dom/shadow/content-reprojection-fallback-crash-expected.txt: Added.
        * fast/dom/shadow/content-reprojection-fallback-crash.html: Added.

2012-10-22  Raphael Kubo da Costa  <raphael.kubo.da.costa@intel.com>

        [EFL] Rebaseline pixel expectations after r131941 and r131991, part 3.

        * platform/efl/fast/repaint/scroll-fixed-layer-with-reflection-expected.png:
        * platform/efl/fast/repaint/scroll-fixed-layer-with-transformed-parent-layer-expected.png:
        * platform/efl/fast/repaint/scroll-fixed-reflected-layer-expected.png:
        * platform/efl/fast/repaint/scroll-in-clipped-layer-expected.png:
        * platform/efl/fast/repaint/scroll-in-fixed-layer-expected.png:
        * platform/efl/fast/repaint/scroll-in-transformed-layer-expected.png:
        * platform/efl/fast/repaint/scroll-inside-table-cell-expected.png: